Revert "test: Fix tests that spawn new processes"
This reverts commit 6dca4706c271dd03a64151b62895a08dab5a8bab.